--- a/optimizations/JPEG/JPEG.csproj
+++ b/optimizations/JPEG/JPEG.csproj
@@ -6,6 +6,10 @@
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="System.Drawing.Common" Version="8.0.0-preview.1.23110.8" />
     </ItemGroup>
