--- a/optimizations/JPEG/JPEG.csproj
+++ b/optimizations/JPEG/JPEG.csproj
@@ -10,6 +10,10 @@
       <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    </PropertyGroup>
+
     <ItemGroup>
       <PackageReference Include="System.Drawing.Common" Version="8.0.0-preview.1.23110.8" />
     </ItemGroup>
